--- a/csslayout.css
+++ b/csslayout.css
@@ -24,9 +24,10 @@ padding: 0;
 }
 
 .logo img {
-	width: 1445px;
-	height: 120px;
+	max-width: 500px;
+	height: auto;
 	display: block;
+	margin: auto;
 }
 
 .icon {
